# Air-Gapped-Rag-System

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  LICENSE  Makefile  PROGRESS.md  README.md  docker-compose.cpu.yml  docker-compose.yml  prep_offline.ps1  pyproject.toml  start.bat
.github/workflows/: ci.yml  security-scan.yml
app/: Dockerfile  audit.py  auth.py  chunking.py  config.py  crypto.py  input_validator.py  locales.py  logging_config.py  metrics.py  pdf_processor.py  prompt_shield.py  query_expansion.py  rag_engine.py  rate_limiter.py  requirements.txt  reranker.py  retrieval.py  streamlit_app.py
app/.streamlit/: config.toml  secrets.toml
docs/: compliance.md  staging-plan.md
documents/: .gitkeep
k8s/: 00-namespace.yaml  01-configmap.yaml  02-secrets.yaml  03-pvc.yaml  10-ollama.yaml  20-app.yaml  30-nginx.yaml  31-nginx-configmap.yaml  40-network-policy.yaml
nginx/: Dockerfile  nginx.conf  provision-ssl.sh
ollama/: Dockerfile  entrypoint.sh
scripts/: backup.sh  generate_secrets.sh  restore.sh
tests/: chaos_test.sh  conftest.py  test_airgap.py  test_audit.py  test_auth.py  test_chaos.py  test_injection.py  test_integration.py  test_licenses.py  test_rag.py
wheels/: .gitkeep
