[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fortaleza-digital"
version = "2.0.0"
description = "Sovereign Air-Gapped RAG Intelligence System"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require docker)",
    "security: Security-focused tests",
    "performance: Performance benchmarks",
    "slow: Tests that take more than 10 seconds",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S311", "PLR2004"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
no_implicit_optional = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B303", "B404", "B603", "B607"]
